--- a/javascript/templates/js-assessment.html
+++ b/javascript/templates/js-assessment.html
@@ -34,6 +34,7 @@
   <i id="message-to-change">hello</i>
   <button id="change-hello-to-goodbye-button">Turn <b>Hello</b> Into <b>Goodbye</b></button>
   <!-- Hey, look, that was another way to do a button - what might it be good for? -->
+  <!-- Is this so that we can label elements on the button and manipulate them with jQuery/JS? -->
 </fieldset>
 
 <script>
